content/assets/src/styles/index.scss
// Import variables
@use "./variables.scss";

// Import utility classes
@use "./utils.scss";

// Import component stylesheets
@use "../../../../components/SiteHeader/SiteHeader.scss";
@use "../../../../components/SiteFooter/SiteFooter.scss";

// General styling
* {
	box-sizing: border-box;
}

html {
	overflow-x: hidden;
}

svg,
img,
video {
	display: block;
	max-width: 100%;
	height: auto;
}

svg {
	overflow: visible;
	fill: var(--color-dark);
}

a {
	font-size: max(1.125rem, 1.25vw);
	color: var(--color-dark);

	@media screen and (hover: hover) {
		&:hover {
			color: var(--color-primary);
		}
	}

	ul > li > & {
		text-decoration: none;
	}
}

#mobile-menu-checkbox {
	display: none;
}

h1,
h2 {
	margin-block: 0.25em;
	line-height: 1.05;
	text-transform: uppercase;
	font-size: max(4em, 5vw);

	.has-error main & {
		font-size: 3em;
	}
}

h3 {
	text-transform: uppercase;
	font-size: max(1.75em, 2.25vw);
}

p {
	font-size: max(1.125rem, 1.25vw);
}

body {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
	margin: 0;
	line-height: 1.15;
	font-family: Relevant, Helvetica, Arial, sans-serif;
	color: var(--color-dark);
	background-color: var(--color-light);

	main {
		flex-grow: 1;
		margin-top: var(--header-height);
		padding: var(--main-padding);

		& > * {
			&:first-child {
				margin-top: 0;
			}

			&:last-child {
				margin-bottom: 0;
			}
		}
	}

	@media screen and (max-width: 768px) {
		main {
			max-width: 100vw;
		}
	}
}

.menu-item.active-menu-item,
.menu-item.has-active-menu-item {
	.menu-item-link {
		color: var(--color-primary);
	}
}

.highlight-circle {
	position: relative;

	&::after {
		content: "";
		display: block;
		position: absolute;
		transform: translate(-50%, -50%) rotate(-4deg);
		top: 50%;
		left: 53%;
		width: 130%;
		height: 130%;
		border-radius: 100%;
		border: 2px solid var(--color-dark);
		transform-origin: 50% 0;
	}

	&.blue::after {
		border-color: var(--color-primary);
	}
}

